# valence-extra

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
crates/building/: Cargo.toml
crates/building/src/: lib.rs  placement_handler.rs
crates/bvh/: Cargo.toml  README.md
crates/bvh/src/: build.rs  bvh_resource.rs  lib.rs  node.rs  utils.rs
crates/bvh/src/query/: closest.rs  range.rs
crates/chat/: Cargo.toml
crates/chat/src/: lib.rs
crates/combat/: Cargo.toml
crates/combat/src/: calculations.rs  lib.rs
crates/fall_damage/: Cargo.toml
crates/fall_damage/src/: lib.rs
crates/physics/: Cargo.toml
crates/physics/src/: bvh.rs  lib.rs  utils.rs
crates/utils/: Cargo.toml
crates/utils/src/: aaab.rs  damage.rs  enchantments.rs  item_values.rs  lib.rs
examples/: building.rs  chat.rs  combat.rs  fall_damage.rs  physics.rs  shooting.rs
src/: lib.rs
