[package]
name = "valence-extra"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [ 
    "crates/bvh", "crates/chat", "crates/combat", "crates/fall_damage", "crates/physics", "crates/utils",
]

[workspace.dependencies]
bevy_ecs = "0.14.2"
valence_spatial = { git = "https://github.com/valence-rs/valence/" }
valence = { git = "https://github.com/valence-rs/valence/" }
tracing = "0.1.40"
rand = "0.8.5"
bevy_time = "0.14.2"

bvh = { path = "crates/bvh" }
chat = { path = "crates/chat" }
physics = { path = "crates/physics" }
utils = { path = "crates/utils" }
combat = { path = "crates/combat" }
fall_damage = { path = "crates/fall_damage" }

[features]
# default = ["chat", "combat", "fall_damage", "physics", "utils"]
default = []
bvh = ["dep:bvh", "dep:utils"]
chat = ["dep:chat"]
combat = ["dep:combat", "dep:physics", "dep:fall_damage", "dep:utils"]
fall_damage = ["dep:fall_damage", "dep:utils"]
physics = ["dep:physics", "dep:bvh"]
utils = ["dep:utils"]

[dev-dependencies]
valence = { workspace = true }
tracing = { workspace = true }


[dependencies]
bvh = { workspace = true, optional = true }
chat = { workspace = true, optional = true }
combat = { workspace = true, optional = true }
fall_damage = { workspace = true, optional = true }
physics = { workspace = true, optional = true }
utils = { workspace = true, optional = true }
bevy_time = { workspace = true }

[[example]]
name = "chat"
required-features = ["chat"]

[[example]]
name = "combat"
required-features = ["combat"]

[[example]]
name = "fall_damage"
required-features = ["fall_damage"]

[[example]]
name = "physics"
required-features = ["physics"]

[[example]]
name = "shooting"
required-features = ["physics"]